gitops/apps/data-contract-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-contract-api
  namespace: data-contract
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-contract-api
  template:
    metadata:
      labels:
        app: data-contract-api
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: api
          image: busybox:1.36
          command: ["sh", "-c", "while true; do echo 'data contract ok' && date -u; sleep 30; done"]
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 50m
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
