gitops/apps/data-contract-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-contract-api
  namespace: data-contract
spec:
  selector:
    app: data-contract-api
  ports:
    - name: http
      port: 80
      targetPort: 8080
